# shu-fastapi

./: .gitignore  pyproject.toml
app/: .env.template  alembic.ini  main.py
app/api/v1/: __init__.py  auth.py  booking.py  users.py
app/core/: auth.py  config.py  database.py  service.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: 2025_04_15_2313-ad7f7118a087_initial_revision.py  2025_04_15_2319-47f724e96d91_add_table_hotels.py  2025_04_18_2240-a5c5c52f4d88_add_users_rooms_bookings.py
app/models/: __init__.py  booking.py  hotel.py  room.py  user.py
app/pages/: router.py
app/schemas/: __init__.py  auth.py  booking.py  user.py
app/service/: booking.py  user.py
app/utils/: text.ipynb
docker/: docker-compose.redis.yaml
